# data-factory

./: .gitignore  CLAUDE.md  readme.md
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.claude/: settings.local.json
.specify/memory/: constitution.md
data-agent/: README.md
data-ai/: CLAUDE.md  README.md  workflows.md
data-ai/.claude/: settings.json
data-backend/: README.md
data-engine/: .gitignore  Dockerfile  pom.xml  readme.md
data-engine/data-engine-api/: pom.xml
data-engine/data-engine-common/: pom.xml
data-engine/data-engine-dao/: pom.xml
data-engine/data-engine-launcher/: pom.xml
data-engine/data-engine-service/: pom.xml
data-engine/data-engine-task/: pom.xml
data-engine/data-engine-web/: pom.xml
data-foundation/: .gitignore  Dockerfile  pom.xml
data-foundation/common/: pom.xml
data-foundation/core/: pom.xml
data-foundation/dao/: pom.xml
data-foundation/data-engine-api/: pom.xml
data-foundation/data-engine-common/: pom.xml
data-foundation/data-engine-dao/: pom.xml
data-foundation/data-engine-launcher/: pom.xml
data-foundation/data-engine-service/: pom.xml
data-foundation/data-engine-task/: pom.xml
data-foundation/data-engine-web/: pom.xml
data-foundation/data-foundation-api/: pom.xml
data-foundation/data-foundation-common/: pom.xml
data-foundation/data-foundation-dao/: pom.xml
data-foundation/data-foundation-launcher/: pom.xml
data-foundation/data-foundation-manager/: pom.xml
data-foundation/data-foundation-service/: pom.xml
data-foundation/data-foundation-task/: pom.xml
data-foundation/data-foundation-web/: pom.xml
data-foundation/launcher/: pom.xml
data-foundation/manager/: pom.xml
data-foundation/service/: pom.xml
data-foundation/web/: pom.xml
data-frontend/: README.md
data-modeling/: README.md
data-terminal/: CLAUDE.md  Cargo.toml  Dioxus.toml  README.md
data-terminal/assets/: tailwind.css
data-terminal/backend/: Cargo.toml
data-terminal/backend/.cursor/rules/: rust-async-development-rules.mdc  rust-module-rules.mdc
data-terminal/backend/src/: autofac.rs  main.rs
data-terminal/backend/src/models/: collection.rs  datasource.rs  error.rs  mod.rs  project.rs  resource.rs  web.rs
data-terminal/backend/src/models/datasource/: datasource.rs  mod.rs
data-terminal/backend/src/models/resource/: batch_compute_config.rs  database_config.rs  file_system_config.rs  mod.rs  queue_config.rs  resource.rs  stream_compute_config.rs  vector_database_config.rs
data-terminal/backend/src/repositories/: collection_repository.rs  collection_task.rs  datasource.rs  mod.rs  project.rs  resource.rs
data-terminal/backend/src/routes/: collection.rs  datasource.rs  jwt.rs  login.rs  mod.rs  project.rs  resource.rs
data-terminal/backend/src/services/: collection_service.rs  datasource.rs  mod.rs  project.rs  resource.rs
data-terminal/backend/src/utils/: config.rs  data_engine_client.rs  database.rs  mod.rs  sqlx_helper.rs
data-terminal/docsite/: Cargo.toml
data-terminal/frontend/: .gitignore  Cargo.toml  README.md  input.css
data-terminal/frontend/.cursor/rules/: dioxus.mdc
data-terminal/frontend/assets/: tailwind.css
data-terminal/frontend/src/: main.rs  routes.rs
data-terminal/frontend/src/components/: add_resource_dialog.rs  content.rs  datasource_add_dialog.rs  datasource_card.rs  datasource_delete_dialog.rs  datasource_edit_dialog.rs  datasource_test_dialog.rs  datasource_type_dialog.rs  framework.rs  mod.rs  mysql_config_page.rs  navbar.rs  project_panel.rs  project_selector.rs  resource_delete_dialog.rs  resource_dialog.rs  sidebar_left.rs  sidebar_right.rs
data-terminal/frontend/src/components/collection/: datasource_selector.rs  db_config_panel.rs  mod.rs  mode_selector.rs  resource_selector.rs  target_schema_editor.rs  task_stage_badge.rs  task_status_badge.rs  transform_editor.rs
data-terminal/frontend/src/models/: collection.rs  config.rs  datasource.rs  mod.rs  project.rs  protocol.rs  resource.rs
data-terminal/frontend/src/pages/: collection_create_page.rs  collection_edit_page.rs  collection_page.rs  datasource.rs  datasource_mysql_config.rs  datasource_overview.rs  datasource_postgres_config.rs  datasource_queryapi_config.rs  datasource_subscribeapi_config.rs  home.rs  login.rs  mod.rs  resource.rs
data-terminal/frontend/src/utils/: collection_api.rs  cookie.rs  error.rs  mod.rs  request.rs  validate.rs
data-terminal/src/: app_layout.rs  base_layout.rs  main.rs  routes.rs
data-terminal/src/components/: content.rs  framework.rs  sidebar_left.rs  sidebar_right.rs
data-terminal/src/pages/: catch_all.rs  home.rs  mod.rs
docs/: brief.md  data-terminal-brownfield-architecture.md  epic-1-core-mysql-pipeline-tasks.md  epic-2-dag-pipeline-orchestration.md  prd.md
docs/architecture/: appendix-useful-commands-and-scripts.md  current-state-vs-expected-etlai-capabilities.md  data-models-and-apis.md  development-and-deployment.md  future-architecture-for-etldagai-integration.md  high-level-architecture.md  index.md  integration-points-and-external-dependencies.md  introduction.md  quick-reference-key-files-and-entry-points.md  source-tree-and-module-organization.md  summary-for-ai-agents.md  technical-debt-and-known-issues.md  testing-reality.md
docs/epic-1/: compatibility-requirements.md  definition-of-done.md  dependencies.md  epic-description.md  epic-goal.md  index.md  risk-mitigation.md  stories.md  story-manager-handoff.md  success-criteria.md  technical-integration-points.md  user-journey-epic-1.md
docs/epic-2/: compatibility-requirements.md  definition-of-done.md  delivery-sequence.md  dependencies.md  epic-description.md  epic-goal.md  index.md  risk-mitigation.md  stories.md  story-manager-handoff.md  success-criteria.md  technical-integration-points.md  user-journey-epic-2.md
docs/stories/: 1.1.mysql-datasource-resource-configuration.md
migrations/v1.0.0/: init.sql  init_config.sql  init_project.sql
reference/: information_framework.md
specs/001-collect-task-module/: data-model.md  plan.md  quickstart.md  (+3 more)
(+257 files in other folders)
