[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tracing-subscriber = "0.3.19"
once_cell = "1.19"
jsonwebtoken = "9.3.1"
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.41", features = ["serde"] }
cookie = "0.18.0"
tower-http = { version = "0.6.6", features = ["cors"] }

