[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tracing-subscriber = "0.3.19"
tracing = "0.1"
once_cell = "1.19"
jsonwebtoken = "9.3.1"
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.41", features = ["serde"] }
cookie = "0.18.0"
tower-http = { version = "0.6.6", features = ["cors"] }
strum_macros = "0.27.1"
strum = { version = "0.27.1", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "chrono", "uuid", "rust_decimal", "json"] }
shaku = "0.6.2"
thiserror = "2.0.12"
async-trait = "0.1.88"
regex = "1.11.1"
uuid = { version = "1.11", features = ["v4"] }

